Fixed input colors not change in dark mode

--- a/web interface/login-style.css
+++ b/web interface/login-style.css
@@ -2,7 +2,6 @@ body {
 	height: 100vh;
 	margin: 0;
 	overflow: hidden;
-	color: var(--white);
 }
 h1 {
 	font-family: poppins, vazir; font-size: 8vh; font-weight: bolder;
